--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,12 @@ h6 { font-size: 0.875rem; }
     margin-left: 10px;
 }
 
+.main-header .navbar .navbar-flex-items .toggle-dark-mode {
+    font-size: 23px;
+    line-height: 0;
+    color: var(--mp-color-gray);
+}
+
 /* Main Wrapper */
 
 .main-wrapper {
