--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,7 @@ h6 { font-size: 0.875rem; }
 /* Navbar Header */
 
 .main-header {
+    background: var(--mp-bg-primary);
     padding: 20px 0;
 }
 
@@ -176,6 +177,10 @@ h6 { font-size: 0.875rem; }
 }
 
 /* Banner */
+
+.section-banner {
+    background: var(--mp-bg-primary);
+}
 
 .banner-flex-items {
 	display: flex;
