--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,18 @@ h6 { font-size: 0.875rem; }
     padding: 20px 0;
 }
 
+.header-fixed {
+    position: fixed;
+    width: 100%;
+    background: var(--mp-color-white);
+    z-index: 99;
+    padding: 10px 0;
+    -webkit-box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+    -webkit-animation: scale-in-ver-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: scale-in-ver-top 0.2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
 .main-header .navbar .navbar-flex-items {
     display: flex;
     justify-content: space-between;
@@ -306,6 +318,10 @@ h6 { font-size: 0.875rem; }
     z-index: 9;
 }
 
+.darkmode--activated .header-fixed {
+    background: var(--mp-color-gray);
+}
+
 .darkmode--activated .section-skill-set {
     background: transparent;
 }
@@ -344,4 +360,43 @@ h6 { font-size: 0.875rem; }
 
 .darkmode--activated .main-footer .footer-bottom > span {
     color: var(--mp-color-white);
+}
+
+/**
+ * ----------------------------------------
+ * animation scale-in-ver-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes scale-in-ver-top {
+	0% {
+	  -webkit-transform: scaleY(0);
+			  transform: scaleY(0);
+	  -webkit-transform-origin: 100% 0%;
+			  transform-origin: 100% 0%;
+	  opacity: 1;
+	}
+	100% {
+	  -webkit-transform: scaleY(1);
+			  transform: scaleY(1);
+	  -webkit-transform-origin: 100% 0%;
+			  transform-origin: 100% 0%;
+	  opacity: 1;
+	}
+}
+
+@keyframes scale-in-ver-top {
+	0% {
+	  -webkit-transform: scaleY(0);
+			  transform: scaleY(0);
+	  -webkit-transform-origin: 100% 0%;
+			  transform-origin: 100% 0%;
+	  opacity: 1;
+	}
+	100% {
+	  -webkit-transform: scaleY(1);
+			  transform: scaleY(1);
+	  -webkit-transform-origin: 100% 0%;
+			  transform-origin: 100% 0%;
+	  opacity: 1;
+	}
 }
