--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -76,6 +76,11 @@
 }
 
 @media(max-width: 576px) {
+    /* Container */
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
     /* Navbar Header */
     .navbar-flex-items .navbar-item-menu {
