--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,10 @@ h6 { font-size: 0.875rem; }
 }
 
 /* Section Header */
+section {
+    padding: 80px 0 80px;
+}
+
 .section-header {
    padding-bottom: 2em;
 }
@@ -239,14 +243,12 @@ h6 { font-size: 0.875rem; }
 
 .about-section {
   background: var(--mp-color-white);
-  padding: 80px 0 80px;
 }
 
 /* Skill Set */
 
 .section-skill-set {
     background: var(--mp-bg-primary);
-    padding: 80px 0 80px;
 }
 
 .section-skill-set .card-skill-set {
@@ -256,14 +258,15 @@ h6 { font-size: 0.875rem; }
 }
 
 .section-skill-set .card-skill-set .card-body {
-    display: grid;
+    display: inline-grid;
     justify-items: center;
+    align-items: center;
     text-align: center;
-    padding: 30px;
+    padding: 20px;
 }
 
 .section-skill-set .card-skill-set .card-body > i {
-    font-size: 40px;
+    font-size: 50px;
     line-height: 0;
 }
 
